--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -6,6 +6,12 @@
     state: present
     update_cache: yes
 
+- name: Install Python PostgreSQL library
+  apt:
+    name: python3-psycopg2
+    state: present
+    update_cache: yes
+
 - name: Ensure PostgreSQL is running
   service:
     name: postgresql
