Add project files

--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -21,7 +21,7 @@
 - name: Allow password authentication for PostgreSQL
   lineinfile:
     path: /etc/postgresql/12/main/pg_hba.conf
-    regexp: "^local\s+all\s+postgres\s+peer"
+    regexp: "^local[[:space:]]+all[[:space:]]+postgres[[:space:]]+peer"
     line: "local   all             postgres                                md5"
     state: present
   notify: Restart PostgreSQL
