--- a/roles/db/tasks/main.yml
+++ b/roles/db/tasks/main.yml
@@ -1,9 +1,9 @@
 ---
 - name: Start message
   ansible.builtin.debug:
-    msg: 'Create task to install and preparing DB server'
+    msg: 'Create task to install and prepare DB server'
 
-- name: Install MariaDB
+- name: Install MariaDB and dependencies
   ansible.builtin.apt:
     name:
       - mariadb-server
@@ -16,7 +16,7 @@
     state: started
     enabled: yes
 
-- name: Set new password for root user
+- name: Set root password for MariaDB
   ansible.builtin.mysql_user:
     name: "{{ login_user }}"
     password: "{{ login_pass }}"
@@ -25,25 +25,25 @@
     login_unix_socket: /var/run/mysqld/mysqld.sock
     check_implicit_admin: yes
 
-- name: Create a new MariaDB database
+- name: Create application database
   ansible.builtin.mysql_db:
-    login_user: "{{ login_user }}"
-    login_password: "{{ login_pass }}"      
     name: "{{ db_name }}"
     state: present
     encoding: utf8
+    login_user: "{{ login_user }}"
+    login_password: "{{ login_pass }}"
 
-- name: Create user for app
+- name: Create user for application
   ansible.builtin.mysql_user:
-     login_user: "{{ login_user }}"
-     login_password: "{{ login_pass }}"
-     name: "{{ db_user }}"
-     password: "{{ db_pass }}"
-     host: '%'
-     priv: "{{ db_name }}.*:ALL"
-     state: present
+    name: "{{ db_user }}"
+    password: "{{ db_pass }}"
+    priv: "{{ db_name }}.*:ALL"
+    host: '%'
+    login_user: "{{ login_user }}"
+    login_password: "{{ login_pass }}"
+    state: present
 
-- name: Add custom config 
+- name: Add custom config for MariaDB
   ansible.builtin.template:
     src: my.cnf.j2
     dest: /etc/mysql/my.cnf
